Background and Header

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel = "stylesheet" href="styles.css">
     <title>Sakura Payment Home</title>
 </head>
-<body>
+<body class = "bg">
     <div class = "header">
-        <header>Sakura Payments</header>
+        <header class = "title">Sakura Payments</header>
     </div>
 
 </body>
