--- a/index.html
+++ b/index.html
@@ -8,9 +8,33 @@
     <title>Sakura Payment Home</title>
 </head>
 <body class = "bg">
-    <div class = "header">
-        <header class = "title">Sakura Payments</header>
-    </div>
+    <div class = "header" id = "headerwrapper">
+        <div id = "logowrapper" >
+            <a href="index.html">
+                <div id = "logodiv">
+                    <img src="logo.png" alt="Sakura Logo" class = "logo">
+                </div>
+        
+                <div id="titlediv">
+                    <header class = "title">Sakura Payments</header>
+                </div>
+            </a>
+        </div>
 
+        <a href = "demo.html">
+            <div id ="demodiv">
+                <header2 class = "title">Demo</header2>
+            </div>
+        </a>
+
+        <a href = "about.html">
+            <div id = "aboutdiv">
+                <header2 class = "title">About Us</header2>
+            </div>
+        </a>
+
+        </div>
+
+        </div>
 </body>
 </html>
