--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel = "stylesheet" href="styles.css">
-    <title>Sakura Payment Home</title>
+    <link rel = "shortcut icon" type = "image/png" href="favicon.png"/>
+    <title>Sakura Payment - Home</title>
 </head>
 <body class = "bg">
     <div class = "header" id = "headerwrapper">
