--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
 
         </div>
 
+        <footer id = "footerwrapper">
+            <p>This should be a footer</p>
+        </footer>
+
         </div>
 </body>
 </html>
