--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel = "shortcut icon" type = "image/png" href="favicon.png"/>
     <title>Sakura Payment - Home</title>
 </head>
-<body class = "bg">
+<body>
+
+    <div class = "bg"></div>
     <div class = "header" id = "headerwrapper">
         <div id = "logowrapper" >
             <a href="index.html">
