--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <title>Sakura Payment - Home</title>
 </head>
 <body>
-
     <div class = "bg"></div>
     <div class = "header" id = "headerwrapper">
         <div id = "logowrapper" >
@@ -37,6 +36,11 @@
         </a>
 
         </div>
+
+        <div class = "textbox">
+            <div class = "transparent"></div>
+        </div>
+
 
         <footer id = "footerwrapper">
             <p>This should be a footer</p>
