--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel = "stylesheet" href="styles.css">
     <link rel = "shortcut icon" type = "image/png" href="favicon.png"/>
-    <title>Sakura Payment - Home</title>
+    <title>Sakura Payment - Home!</title>
 </head>
 <body>
     <div class = "bg"></div>
