fixed width sizing issue, added extra vertical page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 </head>
 <body>
     
+
+
     <div id = "background1"> 
         <div id = "maintext">
         <div><h1>Welcome to payroll, <br> decentralized.</h1></div>
@@ -18,7 +20,12 @@
         </div>
     </div>
 
+
+    <div id = "background2">
+
+    </div>
     
+
     <header class = "header1"> 
         <a href="index.html">
             <img id = "logo" src = "Resources/logo.png">
