--- a/index.html
+++ b/index.html
@@ -23,21 +23,24 @@
 
     <div id = "background2">
         <div id = "whysakura">
-            <h3 class = "whysakura">Why use Sakura?</h3>
+            <h3 class = "subtitle">Why use Sakura?</h3>
 
-            <p class = "whysakuratext">Sakura is a decentralized app on the Ethereum blockchain, which runs in a global network upheld by thousands of nodes.</p>
+            <p class = "subtitletext">Sakura is a decentralized app on the Ethereum blockchain, which runs in a global network upheld by thousands of nodes.</p>
 
-            <p class = "whysakuratext">
+            <p class = "subtitletext">
                 Traditional payrolls face issues with high amounts of intervention needed to send out a correct payroll.
                 Sakura changes this by automatically calculating payment and making transfers cheap and instantaneous. 
             </p>
 
-            <p class = "whysakuratext">
+            <p class = "subtitletext">
                 We aim to make pay roll simple and trustworthy for both workers and companies.  With Sakura, employees are guarenteed their pay, and
                 administration of payroll is effortless to upkeep.  With an intuitive user experience, Sakura is the solution for making payroll simple.
             </p>
-
         </div>
+    </div>
+
+    <div id = "background3">
+
     </div>
 
 
