--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
     </div>
 
     <div id = "background3">
-
+        <div id = "blockchain">
+            <h3 class = "subtitle">What is a blockchain?</h3>
+            <p class = "subtitletext">I love fortnite, fortnite is great I think maybe.</p>
+        </div>
     </div>
 
 
