--- a/index.html
+++ b/index.html
@@ -52,6 +52,32 @@
             <img id = "logo" src = "Resources/logo.png">
             <h2 id = "logotext">Sakura Payment</h2>
         </a>
+
+        <a href= "about.html">
+            <h2 id = "demo">Demo</h2>
+        </a>
+
+        <a href = "about.html">
+            <h2 id = "about">About</h2>
+        </a>
+
+        <a href = "contact.html">
+            <h2 id = "contactus">Contact Us</h2>
+        </a>
+
+        <a>
+            <img id = "github" src = "Resources/github.png">
+        </a>
+
+        <a>
+            <img id = "twitter" src = "Resources/twitter.png">
+        </a>
+
+        <a>
+            <img id = "discord" src = "Resources/discord.png">
+        </a>
+
+
     </header>
     
 </body>
