--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
 
     <div id = "background2">
+        <img src = "Resources/pinkether.png" id = "pinkether">
         <div id = "whysakura">
             <h3 class = "subtitle">Why use Sakura?</h3>
 
@@ -40,11 +41,28 @@
     </div>
 
     <div id = "background3">
+        <img src = "Resources/lock.png" id = "lock">
         <div id = "blockchain">
-            <h3 class = "subtitle">What is a blockchain?</h3>
-            <p class = "subtitletext">I love fortnite, fortnite is great I think maybe.</p>
+            <h3 class = "subtitle">Decentralized for security and control.</h3>
+            <p class = "subtitletext">Payroll systems of the past place company funds and employee wages in someone else's hands.  
+                With Sakura, you have full control of compensation - direct from employer to employee.  
+            </p>
+
+            <p class = "subtitletext">  All company data is secured and encrypted by the Ethereum protocol.  Your payment plan
+                is verifiable by all employees.
+            </p>
+
+            <p class = "subtitletext">  Companies may designate administrators to help govern your payment plans, and streamline moderation.
+                Sakura inherits from, improves, and modernizes the payment plans of today.
+            </p>
         </div>
     </div>
+
+    <div id = "background4">
+
+    </div>
+
+
 
 
     <header class = "header1"> 
