background gradients, new logo

--- a/index.html
+++ b/index.html
@@ -59,16 +59,26 @@
     </div>
 
     <div id = "background4">
+        <div>
+            <h3 id = "subtitle">Secure. Modern. Streamlined.</h3>
+        </div>
+        
+    </div>
+
+    <div id = "footermargin">
 
     </div>
+
+    <footer id = "footer">
+
+    </footer>
 
 
 
 
     <header class = "header1"> 
         <a href="index.html">
-            <img id = "logo" src = "Resources/logo.png">
-            <h2 id = "logotext">Sakura Payment</h2>
+            <img id = "logo" src = "Resources/newcombined2.png">
         </a>
 
         <a href= "about.html">
