--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     </div>
 
 
+
     <div id = "background2">
         <img src = "Resources/pinkether.png" id = "pinkether">
         <div id = "whysakura">
@@ -38,6 +39,9 @@
                 administration of payroll is effortless to upkeep.  With an intuitive user experience, Sakura is the solution for making payroll simple.
             </p>
         </div>
+    </div>
+
+    <div id = "titlemargin">
     </div>
 
     <div id = "background3">
@@ -58,17 +62,20 @@
         </div>
     </div>
 
+
     <div id = "background4">
-        <div>
-            <h3 id = "subtitle">Secure. Modern. Streamlined.</h3>
-        </div>
-        
+            <div id = "conclusion">
+                <h3 class = "subtitle">Secure. Modern. Streamlined.</h3>
+            </div>
+            
+            <div>
+
+            </div>
     </div>
 
-    <div id = "footermargin">
 
-    </div>
 
+    <div id = "footermargin"></div>
     <footer id = "footer">
 
     </footer>
