--- a/index.html
+++ b/index.html
@@ -67,12 +67,13 @@
             <div id = "conclusion">
                 <h3 class = "subtitle">Secure. Modern. Streamlined.</h3>
             </div>
-            
-            <div>
 
+            <div>
+                <img id = "security" class = "svg" src = "Resources/security.svg">
+                <img id = "modern" class = "svg"  src = "Resources/modern.svg">
+                <img id = "streamline" class = "svg"  src = "Resources/streamlined.svg">
             </div>
     </div>
-
 
 
     <div id = "footermargin"></div>
